--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -4,9 +4,6 @@ repositories {
 }
 
 dependencies {
-    // -- bukkit-versions --
-    project(":bukkit:mcversion").getSubprojects().forEach(mcv -> implementation mcv)
-
     // -- spigot api -- (base)
     compileOnly 'org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT'
 
@@ -65,23 +62,23 @@ dependencies {
 shadowJar {
     checkstyleTest
 
-    archiveFileName = "Dream-Template-Bukkit-${project.version}.jar"
+    archiveFileName = "Dream-Menu-Test-${project.version}.jar"
 
     minimize()
 
-    relocate "com.cryptomorin", "cc.dreamcode.template.libs.com.cryptomorin"
-    relocate "eu.okaeri", "cc.dreamcode.template.libs.eu.okaeri"
+    relocate "com.cryptomorin", "cc.dreamcode.menutest.libs.com.cryptomorin"
+    relocate "eu.okaeri", "cc.dreamcode.menutest.libs.eu.okaeri"
 
-    relocate "cc.dreamcode.platform", "cc.dreamcode.template.libs.cc.dreamcode.platform"
-    relocate "cc.dreamcode.utilities", "cc.dreamcode.template.libs.cc.dreamcode.utilities"
-    relocate "cc.dreamcode.menu", "cc.dreamcode.template.libs.cc.dreamcode.menu"
-    relocate "cc.dreamcode.command", "cc.dreamcode.template.libs.cc.dreamcode.command"
-    relocate "cc.dreamcode.notice", "cc.dreamcode.template.libs.cc.dreamcode.notice"
+    relocate "cc.dreamcode.platform", "cc.dreamcode.menutest.libs.cc.dreamcode.platform"
+    relocate "cc.dreamcode.utilities", "cc.dreamcode.menutest.libs.cc.dreamcode.utilities"
+    relocate "cc.dreamcode.menu", "cc.dreamcode.menutest.libs.cc.dreamcode.menu"
+    relocate "cc.dreamcode.command", "cc.dreamcode.menutest.libs.cc.dreamcode.command"
+    relocate "cc.dreamcode.notice", "cc.dreamcode.menutest.libs.cc.dreamcode.notice"
 
-    relocate "org.bson", "cc.dreamcode.template.libs.org.bson"
-    relocate "com.mongodb", "cc.dreamcode.template.libs.com.mongodb"
-    relocate "com.zaxxer", "cc.dreamcode.template.libs.com.zaxxer"
-    relocate "org.slf4j", "cc.dreamcode.template.libs.org.slf4j"
-    relocate "org.json", "cc.dreamcode.template.libs.org.json"
-    relocate "com.google.gson", "cc.dreamcode.template.libs.com.google.gson"
+    relocate "org.bson", "cc.dreamcode.menutest.libs.org.bson"
+    relocate "com.mongodb", "cc.dreamcode.menutest.libs.com.mongodb"
+    relocate "com.zaxxer", "cc.dreamcode.menutest.libs.com.zaxxer"
+    relocate "org.slf4j", "cc.dreamcode.menutest.libs.org.slf4j"
+    relocate "org.json", "cc.dreamcode.menutest.libs.org.json"
+    relocate "com.google.gson", "cc.dreamcode.menutest.libs.com.google.gson"
 }
